--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "vue": "^2.6.10",
+    "vue-body-class": "^2.0.0-beta.2",
     "vue-loader": "^15.7.0",
+    "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
